--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 h1 {
     font-size: 34px;
     color: darkred;
-    text-align: center
+    text-align: center;
 }
 
 
@@ -13,7 +13,7 @@ h1 {
 p {
     font-family: Helvetica;
     font-size: 24px;
-    color: rgb(151, 6, 79)
+    color: rgb(151, 6, 79);
     margin: 100px ;
     text-align: center;
 }
@@ -34,9 +34,9 @@ margin-left: 8cm;
     margin-left: 250px;
 }
 .item_lista_cabecalho{
-    color:deeppink
+    color:deeppink;
     list-style: none;
-    text-transform uppercase; 
+    text-transform uppercase;
     font-size: 10px; 
     padding: 5px;
     text-align: center;
