--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    backgroud: rgb(255, 0, 0);
+    background: rgb(245, 183, 183);
 }
 
 h1 {
     font-size: 34px;
-    color: darkred;
+    color: rgb(83, 3, 3);
     text-align: center;
 }
 
@@ -26,7 +26,7 @@ margin-left: 8cm;
 
 
 .cabecalho{
-    background-color: hotpink;
+    background-color: rgb(247, 173, 210);
     display: flex;
 }
 .lista_cabecalho{
@@ -34,9 +34,9 @@ margin-left: 8cm;
     margin-left: 250px;
 }
 .item_lista_cabecalho{
-    color:deeppink;
+    color:rgb(247, 122, 188);
     list-style: none;
-    text-transform uppercase;
+    text-transform: uppercase;
     font-size: 10px; 
     padding: 5px;
     text-align: center;
