--- a/style.css
+++ b/style.css
@@ -1,48 +1,36 @@
-body {
-    background: rgb(245, 183, 183);
+body{
+    background-color: aliceblue
 }
-
-h1 {
-    font-size: 34px;
-    color: rgb(83, 3, 3);
+h1{
+    font-size: 60px;
+    color: black;
     text-align: center;
 }
-
-
-
-p {
-    font-family: Helvetica;
-    font-size: 24px;
-    color: rgb(151, 6, 79);
-    margin: 100px ;
-    text-align: center;
+p{
+    font-size: 30px;
+    color: black;
+    text-align: justify;
 }
-
-img {
-width: 70%;
-height: 70%;
-margin-left: 8cm;
+img{
+    width: 450px;
+    height: 340px;
+    margin: 30px;
+    margin-left: 30px;
 }
-
-
 .cabecalho{
-    background-color: rgb(247, 173, 210);
+    background-color:rgb(243, 25, 127);
     display: flex;
+}
+.logocabecalho{
+    width: 100px;
 }
 .lista_cabecalho{
     display: flex;
-    margin-left: 250px;
+    margin-left: 100px;
 }
 .item_lista_cabecalho{
-    color:rgb(247, 122, 188);
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    padding-left: 30px;
     list-style: none;
-    text-transform: uppercase;
-    font-size: 10px; 
-    padding: 5px;
-    text-align: center;
-}
-.logo{
-    width: 10%;
-
-
 }
